# OSGB36

./: .gitignore  CMakeLists.txt  GPS.ino  Readme.md  distance_test.cpp  generate_arduino.sh  main.cpp
include/: calculator.hpp  constants.hpp  ellipsoids.hpp  objects.hpp  utils.hpp
include/ellipsoids/: airy1830.hpp  wgs84.hpp
include/functions/: helmert.hpp  lon_lat.hpp  olson.hpp
include/old/: objects.hpp
src/: constants.cpp
src/calculator/: angles.cpp  distance.cpp  geoid_convert.cpp  grid_ref.cpp  helmert_transform.cpp  meridian_arc.cpp  olson.cpp  ordinance_survey_method.cpp  ordonnance_survey_method.cpp  plus_code.cpp  to_ECEF.cpp  transverse_mercator.cpp  zhu.cpp
